testsuite/veronac/codegen/compile-fail/main-class-missing.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
class Foo { }

// CHECK-L: error: Class 'Main' is missing
